<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/btn_config_text"
        android:focusable="true"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_btn_config"
        app:tint="@color/custom_color" />

    <TextView
        android:id="@+id/labelBtnConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_config_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btnConfig"
        app:layout_constraintStart_toStartOf="@+id/btnConfig"
        app:layout_constraintTop_toBottomOf="@+id/btnConfig" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:00" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:contentDescription="@string/btn_play_text"
        android:focusable="true"
        app:backgroundTint="#FFFFFF"
        app:tint="@color/custom_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnReset"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_btn_play" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:contentDescription="@string/btn_reset_text"
        android:focusable="true"
        app:backgroundTint="#FFFFFF"
        app:tint="@color/custom_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPlay"
        app:srcCompat="@drawable/ic_btn_reset" />

    <TextView
        android:id="@+id/labelBtnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_play_text"
        app:layout_constraintEnd_toEndOf="@+id/btnPlay"
        app:layout_constraintStart_toStartOf="@+id/btnPlay"
        app:layout_constraintTop_toBottomOf="@+id/btnPlay" />

    <TextView
        android:id="@+id/labelBtnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset_text"
        app:layout_constraintEnd_toEndOf="@+id/btnReset"
        app:layout_constraintStart_toStartOf="@+id/btnReset"
        app:layout_constraintTop_toBottomOf="@+id/btnReset" />

    <TextView
        android:id="@+id/labelFlow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempo_de_trabalho"
        app:layout_constraintBottom_toTopOf="@+id/txtTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        android:textSize="30sp"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/texto_iniciar_modo_intervalo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:thumbTint="#ffff"
        app:trackTint="@color/custom_color"
        />

    <TextView
        android:id="@+id/labelQtdPomodoro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Quantidade de pomodoros: 0"
        app:layout_constraintBottom_toTopOf="@+id/labelFlow"
        app:layout_constraintStart_toStartOf="@+id/labelFlow"
        android:layout_marginBottom="2dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>